# VmMsoSDK

./: .gitignore  README.md  github.txt
DLLMultDev-Stream/: CMakeLists.txt  DllTest.cpp
DllTest/: CMakeLists.txt  DllTest.cpp  arb.h
DllTest-Callback/: CMakeLists.txt  DllTest.cpp
DllTest-Polling/: CMakeLists.txt  DllTest.cpp
DllTestForMso41/: CMakeLists.txt  DllTest.cpp
DllTestForMso41-Callback/: CMakeLists.txt  DllTest.cpp
DllTestQt/: CMakeLists.txt  CMakeLists.txt.user.64bd6c7  CMakeLists.txt.user.6d2499e  CMakeLists.txt.user.6e9ebd7  CMakeLists.txt.user.89c481a  DllTestQt.pro  DllTestQt.pro.user.64bd6c7  main.cpp  vmusbwave.cpp  vmusbwave.h
DllTestQt/plot/: VmSimplePlot.cpp
DllTestQt/qml/: main.qml
MultDevdemo-VC/: CLedState.cpp  CLedState.h  DLLTEST.sln  DLLTEST.vcxproj  DLLTESTDlg.cpp  DLLTESTDlg.h  resource.h
NETTest/: UpgradeLog.htm
NETTest/NETTest/: NETTest.csproj  Program.cs
NETTest/NETTest/Backup/: NETTest.sln
NETTest/NETTest/NETTest/: Program.cs
SharedLibrary/: VmMsoLib.h  VmMultMsoLib.h  旧更新到1.20说明.txt
SharedLibrary/Linux/X64/Debug/: DllTest  DllTestForMso41
SharedLibrary/Linux/X64/Release/: DllTest  DllTestForMso41  libvmmso.so.1.0
SharedLibrary/Linux/aarch64-linux/Release/: libvmmso.so.1.0
SharedLibrary/Linux/arm-linux-gnueabi/Release/: libvmmso.so.1.0
SharedLibrary/Linux/arm-linux-gnueabihf/Release/: libvmmso.so.1.0
SharedLibrary/RaspberryPi/: readme.txt
SharedLibrary/RaspberryPi/aarch64-linux/Debug/: DLLMultDev-Stream  DllTest  DllTest-Polling  DllTestForMso41
SharedLibrary/RaspberryPi/aarch64-linux/Release/: DLLMultDev-Stream  DllTest  DllTest-Polling  DllTestForMso41  libvmmso.so.1.0  libvmmso.so.1.20  libvmmultmso.so.1.20
SharedLibrary/RaspberryPi/arm-linux-gnueabihf/Debug/: DLLMultDev-Stream  DllTest  DllTest-Polling  DllTestForMso41
SharedLibrary/RaspberryPi/arm-linux-gnueabihf/Release/: DLLMultDev-Stream  DllTest  DllTest-Polling  DllTestForMso41  libvmmso.so.1.0  libvmmso.so.1.10  libvmmso.so.1.20
SharedLibrary/Ubuntu/: readme.txt
SharedLibrary/Ubuntu/X64/Debug/: DLLMultDev-Stream  DllTest  DllTest-Polling  DllTestForMso41
SharedLibrary/Ubuntu/X64/Release/: DLLMultDev-Stream  DllTest  DllTest-Polling  DllTestForMso41  libvmmso.so.1.0  libvmmso.so.1.10  libvmmso.so.1.11  libvmmso.so.1.13  libvmmso.so.1.20  libvmmultmso.so.1.20
SharedLibrary/Ubuntu/aarch64-linux/Release/: libvmmso.so.1.0  libvmmso.so.1.10  libvmmso.so.1.11  libvmmso.so.1.13  libvmmso.so.1.20  libvmmultmso.so.1.20
SharedLibrary/Ubuntu/arm-linux-gnueabi/Release/: libvmmso.so.1.0  libvmmso.so.1.10  libvmmso.so.1.11  libvmmso.so.1.13  libvmmso.so.1.20  libvmmultmso.so.1.20
SharedLibrary/Ubuntu/arm-linux-gnueabihf/Release/: libvmmso.so.1.0  libvmmso.so.1.10  libvmmso.so.1.11  libvmmso.so.1.13  libvmmso.so.1.20
SharedLibrary/Windows/: readme.txt
SharedLibrary/Windows/AMR64/Debug/: fftinfo.exp  vmmso.exp  vmmso.lib  vmmultmso.exp  vmmultmso.lib
demo-Labview/: LabviewDemo.vi  test 单通道.vi  自己导入dll注意.txt
demo-Labview/2021/: LabviewDemo.vi
demo-Labview/2021/vmmsolib/: Report.html  dir.mnu  vmmsolib.lvlib
demo-Labview/state_demo/: Main.vi  state_demo.lvproj
demo-Labview/state_demo_for_four_channel/: Main.vi  state_demo.aliases  state_demo.lvlps
demo-Labview/state_demo_for_four_channel/controls/: Data.ctl  State.ctl
demo-Labview/state_demo_for_four_channel/documentation/: Simple State Machine Documentation.html
demo-Labview/state_demo_for_two_channel/: Main.vi  state_demo.lvlps
demo-Labview/state_demo_for_two_channel/controls/: Data.ctl  State.ctl
demo-Labview/vmmso/: Report.html  dir.mnu  vmmso.lvlib
demo-Labview/vmmso/VIs/: Abort Capture.vi  Cal Freq.vi  Capture.vi  DAC Enable.vi  DDS Manual Trigger.vi  DDS Mult Syn.vi  DDS Output Enable.vi  Finish Dll.vi  Get Ac Dc.vi  Get DA Cm V.vi  Get DDS Amplitude Mv.vi  Get DDS Bias Mv.vi  Get DDS Burst Delay Ns.vi  Get DDS Burst Period Ns.vi  Get DDS Burst Style.vi  Get DDS Cur Boxing Amplitude Mv.vi  Get DDS Cur Boxing Bias Mv Max.vi  Get DDS Cur Boxing Bias Mv Min.vi  Get DDS Depth.vi  Get DDS Loops Num Infinity.vi  Get DDS Loops Num.vi  Get DDS Out Mode.vi  Get DDS Output Gate Enge.vi  Get DDS Support Boxing Style.vi  Get DDS Sweep Start Freq.vi  Get DDS Sweep Stop Freq.vi  Get DDS Sweep Time.vi  Get DDS Trigger Source Enge.vi  Get DDS Trigger Source Io.vi  Get DDS Trigger Source.vi  Get Freq.vi  Get IO In Out.vi  Get IO In State.vi  Get IO Pulse Duty.vi  Get IO Pulse Freq.vi  Get Memory Length.vi  Get Negative Duty.vi  Get Only Id0.vi  Get Only Id1.vi  Get Osc Range Maxm V.vi  (+98 more)
demo-Labview/vmmsolib/: Report.html  dir.mnu  vmmsolib.lvlib
demo-Labview/vmmsolib/VIs/: Abort Capture.vi  Capture.vi  DDS Output Enable.vi  Finish Dll.vi  Get Ac Dc.vi  Get DDS Amplitude Mv.vi  Get DDS Bias Mv.vi  Get DDS Cur Boxing Amplitude Mv.vi  Get DDS Cur Boxing Bias Mv Max.vi  Get DDS Cur Boxing Bias Mv Min.vi  Get DDS Support Boxing Style.vi  Get IO In Out.vi  Get IO In State.vi  Get Memory Length.vi  Get Only Id0.vi  Get Only Id1.vi  Get Osc Sample.vi  Get Osc Support Sample Num.vi  Get Osc Support Samples.vi  Get Pre Trigger Percent.vi  Get Support Io Number.vi  Get Trigger Level.vi  Get Trigger Mode.vi  Get Trigger Pulse Width Down Ns.vi  Get Trigger Pulse Width Ns Max.vi  Get Trigger Pulse Width Ns Min.vi  Get Trigger Pulse Width Up Ns.vi  Get Trigger Sense Div.vi  Get Trigger Source.vi  Get Trigger Style.vi  Get Voltage Resolution.vi  IO Enable.vi  Init Dll.vi  Is DDS Output Enable.vi  Is Data Ready.vi  Is Dev Available.vi  Is IO Enable.vi  Is IO Read State Ready.vi  Is Support Ac Dc.vi  Is Support DDS Device.vi  (+36 more)
demo-Labview/vmmsolib/subvi/: Error Converter (ErrCode or Status).vi
demo-VC/: AdvPlot.cpp  AdvPlot.h  AdvPlotBasic.h  DLLTEST.APS  DLLTEST.rc  DLLTEST.vcxproj  DLLTEST.vcxproj.filters  DLLTESTDlg.cpp  DLLTESTDlg.h  InfoText.cpp  InfoText.h  lineattribute.cpp  lineattribute.h  sinc8192.h
demo-VC/x64/Release/: vmmso.lib
dome-Python/: how to run.txt  test.py  test_callback.py  test_callback2.py  test_multdev_stream_callback.py  test_polling.py
(+102 files in other folders)
